crates/amalgam-parser/tests/snapshots/practical_usage_snapshot_test__cross_package_imports.snap
---
source: crates/amalgam-parser/tests/practical_usage_snapshot_test.rs
expression: snapshot_content
---
SUCCESS: false

OUTPUT:
STDERR:
error: unbound identifier `groupVersionForDiscovery`
   ┌─ /Users/jtoft/src/ai/amalgam/examples/pkgs/k8s_io/apimachinery.pkg.apis/meta/v1/mod.ncl:21:10
   │
21 │        | groupVersionForDiscovery
   │          ^^^^^^^^^^^^^^^^^^^^^^^^ this identifier is unbound


STDOUT:
